#1 ana sayfa eklendi ve sayfaların birbirlerine bağlantıları kuruldu.

--- a/calisma2.html
+++ b/calisma2.html
@@ -2,6 +2,13 @@
 <!--The href attribute-->
     <html>
         <body>
+                <a href="index.html">Ana sayfa</a>
+                <a href="calisma.html">1</a>
+                <a href="calisma2.html">2</a>
+                <a href="calisma3.html">3</a>
+                <a href="calisma4.html">4</a>
+                <a href="calisma5.html">5</a>
+                <a href="calisma6.html">6</a><br>
             <h2>Fatih Terim</h2>
                 <p>Fatih Terim'in babası bugün vefat etti.</p>
                     <a href="https://www.mynet.com/fatih-terim-in-babasi-talat-terim-hayatini-kaybetti-186555-myspor">Bağlantı için tıklayınız.
