--- a/calisma.html
+++ b/calisma.html
@@ -2,6 +2,13 @@
 <!--the title attribute-->
     <html>
         <body>
+                <a href="index.html">Ana sayfa</a>
+                <a href="calisma.html">1</a>
+                <a href="calisma2.html">2</a>
+                <a href="calisma3.html">3</a>
+                <a href="calisma4.html">4</a>
+                <a href="calisma5.html">5</a>
+                <a href="calisma6.html">6</a><br>
             <h2 title="Çalışılmaya başlandı">Bugün Çarşamba</h2>
                 <p title="Bişeyler Öğreniliyor">
                     Zaman geçtikçe daha da geliştirilir.
