--- a/calisma3.html
+++ b/calisma3.html
@@ -2,7 +2,13 @@
 <!--Size Attributes-->
 <html>
     <body>
-        <h2>Ekran Boyutları</h2>
+            <a href="index.html">Ana sayfa</a>
+            <a href="calisma.html">1</a>
+            <a href="calisma2.html">2</a>
+            <a href="calisma3.html">3</a>
+            <a href="calisma4.html">4</a>
+            <a href="calisma5.html">5</a>
+            <a href="calisma6.html">6</a><br>
         <p>Görüntünün genişliğini ve yüksekliğinin bilgisi
                 <img src="manzara.jpg.jpeg" width="500" height="322">
         </p>
