--- a/calisma4.html
+++ b/calisma4.html
@@ -2,6 +2,13 @@
 <!--The alt Attribute-->
     <html>Görüntü bilgisi
         <body>
+                <a href="index.html">Ana sayfa</a>
+                <a href="calisma.html">1</a>
+                <a href="calisma2.html">2</a>
+                <a href="calisma3.html">3</a>
+                <a href="calisma4.html">4</a>
+                <a href="calisma5.html">5</a>
+                <a href="calisma6.html">6</a><br>
             <h2>dipnot</h2>
             <img src="manzaraa.jpg.jpeg" alt="Kuyunun dibinden bakış açısı" width="500" height="322">
         </body>
