--- a/calisma5.html
+++ b/calisma5.html
@@ -2,6 +2,13 @@
 <!--link-->
     <html>
         <body>
+                <a href="index.html">Ana sayfa</a>
+                <a href="calisma.html">1</a>
+                <a href="calisma2.html">2</a>
+                <a href="calisma3.html">3</a>
+                <a href="calisma4.html">4</a>
+                <a href="calisma5.html">5</a>
+                <a href="calisma6.html">6</a><br>
             <a href=https://www.mynet.com>Bağlantı için tıklayın.</a>
         </body>
     </html>
