--- a/calisma6.html
+++ b/calisma6.html
@@ -2,6 +2,14 @@
 <!--About W3Schools,başlıkta ki ilk kelimeyi görme-->
     <html>
         <body>
+                <a href="index.html">Ana sayfa</a>
+                <a href="calisma.html">1</a>
+                <a href="calisma2.html">2</a>
+                <a href="calisma3.html">3</a>
+                <a href="calisma4.html">4</a>
+                <a href="calisma5.html">5</a>
+                <a href="calisma6.html">6</a><br>
+        
             <h1>Baca dumanları tütüyor</h1>
             <p title=Baca dumanları tütüyor>
                 İstanbul'da ki hava kirlilik oranının %40'ının bacalardan çıkan CO<sub>2</sub> sağlıyor
