--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <body>
+        <a href="index.html">Ana sayfa</a>
         <a href="calisma.html">1</a>
         <a href="calisma2.html">2</a>
         <a href="calisma3.html">3</a>
         <a href="calisma4.html">4</a>
         <a href="calisma5.html">5</a>
         <a href="calisma6.html">6</a><br>
+        <h1>Burası ana sayfadır.</h1>
         <!--kötü iframe örneği.-->
         <!-- <iframe src="calisma.html"></iframe><br>
         <iframe src="calisma2.html"></iframe><br>
