css eklendi ve bütün sayfalardaki görünümler değiştirildi.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <a href="index.html">Ana sayfa</a>
-        <a href="calisma.html">1</a>
-        <a href="calisma2.html">2</a>
-        <a href="calisma3.html">3</a>
-        <a href="calisma4.html">4</a>
-        <a href="calisma5.html">5</a>
-        <a href="calisma6.html">6</a><br>
-        <h1>Burası ana sayfadır.</h1>
-        <!--kötü iframe örneği.-->
-        <!-- <iframe src="calisma.html"></iframe><br>
+
+<head>
+    <style>
+        a {
+
+            font-weight: rgb(206, 112, 112);
+            color: rgb(54, 50, 50);
+            font-style: oblique;
+            font-family: arial;
+            text-decoration: none;
+            vertical-align: baseline;
+            display: inline-block;
+            font-size: 25px;
+            padding: 10px;
+        }
+    </style>
+</head>
+
+<body style="background-color:pink;">
+    <a href="index.html">Ana sayfa</a>
+    <a href="calisma.html">Çalışma1</a>
+    <a href="calisma2.html">Çalışma2</a>
+    <a href="calisma3.html">Çalışma3</a>
+    <a href="calisma4.html">Çalışma4</a>
+    <a href="calisma5.html">Çalışma5</a>
+    <a href="calisma6.html">Çalışma6</a><br>
+    <h1 style="color:black;"><i>Burası ana sayfadır.</i></h1>
+    <!--kötü iframe örneği.-->
+    <!-- <iframe src="calisma.html"></iframe><br>
         <iframe src="calisma2.html"></iframe><br>
         <iframe src="calisma3.html" width="250"></iframe><br>
         <iframe src="calisma4.html"></iframe><br>
         <iframe src="calisma5.html"></iframe><br>
         <iframe src="calisma6.html" width="250"></iframe> -->
-    </body>
+</body>
+
 </html>
