--- a/calisma3.html
+++ b/calisma3.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <!--Size Attributes-->
 <html>
-    <body>
-            <a href="index.html">Ana sayfa</a>
-            <a href="calisma.html">1</a>
-            <a href="calisma2.html">2</a>
-            <a href="calisma3.html">3</a>
-            <a href="calisma4.html">4</a>
-            <a href="calisma5.html">5</a>
-            <a href="calisma6.html">6</a><br>
-        <p>Görüntünün genişliğini ve yüksekliğinin bilgisi
-                <img src="manzara.jpg.jpeg" width="500" height="322">
-        </p>
-    </body>
+
+<head>
+    <style>
+        a {
+
+
+            color: rgb(54, 50, 50);
+            font-style: oblique;
+            font-family: arial;
+            text-decoration: none;
+            vertical-align: baseline;
+            display: inline-block;
+            font-size: 25px;
+            padding: 10px;
+        }
+    </style>
+</head>
+
+<body style="background-color:pink">
+    <a href="index.html">Ana sayfa</a>
+    <a href="calisma.html">Çalışma1</a>
+    <a href="calisma2.html">Çalışma2</a>
+    <a href="calisma3.html">Çalışma3</a>
+    <a href="calisma4.html">Çalışma4</a>
+    <a href="calisma5.html">Çalışma5</a>
+    <a href="calisma6.html">Çalışma6</a><br>
+    <p><br><strong>Görüntünün genişliği ve yüksekliğinin bilgisi</strong></br>
+        <img src="manzara.jpg.jpeg" width="500" height="322">
+    </p>
+</body>
+
 </html>
