--- a/calisma4.html
+++ b/calisma4.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <!--The alt Attribute-->
-    <html>Görüntü bilgisi
-        <body>
-                <a href="index.html">Ana sayfa</a>
-                <a href="calisma.html">1</a>
-                <a href="calisma2.html">2</a>
-                <a href="calisma3.html">3</a>
-                <a href="calisma4.html">4</a>
-                <a href="calisma5.html">5</a>
-                <a href="calisma6.html">6</a><br>
-            <h2>dipnot</h2>
-            <img src="manzaraa.jpg.jpeg" alt="Kuyunun dibinden bakış açısı" width="500" height="322">
-        </body>
-    </html>
+<html>Görüntü bilgisi
+
+<head>
+    <style>
+        a {
+
+            font-weight: rgb(206, 112, 112);
+            color: rgb(54, 50, 50);
+            font-style: oblique;
+            font-family: arial;
+            text-decoration: none;
+            vertical-align: baseline;
+            display: inline-block;
+            font-size: 25px;
+            padding: 10px;
+        }
+    </style>
+</head>
+
+<body style="background-color:pink">
+    <a href="index.html">Ana sayfa</a>
+    <a href="calisma.html">Çalışma1</a>
+    <a href="calisma2.html">Çalışma2</a>
+    <a href="calisma3.html">Çalışma3</a>
+    <a href="calisma4.html">Çalışma4</a>
+    <a href="calisma5.html">Çalışma5</a>
+    <a href="calisma6.html">Çalışma6</a><br>
+    <h2>dipnot</h2>
+    <img src="manzaraa.jpg.jpeg" alt="Kuyunun dibinden bakış açısı" width="500" height="322">
+</body>
+
+</html>
