--- a/calisma.html
+++ b/calisma.html
@@ -6,7 +6,7 @@
     <style>
         a {
 
-            font-weight: rgb(206, 112, 112);
+            font-weight: 800;
             color: rgb(54, 50, 50);
             font-style: oblique;
             font-family: arial;
@@ -15,22 +15,44 @@
             display: inline-block;
             font-size: 25px;
             padding: 10px;
+            width: 12%;
+        }
+
+        .menu {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
+
         }
     </style>
 </head>
 
 <body style="background-color:pink">
-    <a href="index.html">Ana sayfa</a>
-    <a href="calisma.html">Çalışma1</a>
-    <a href="calisma2.html">Çalışma2</a>
-    <a href="calisma3.html">Çalışma3</a>
-    <a href="calisma4.html">Çalışma4</a>
-    <a href="calisma5.html">Çalışma5</a>
-    <a href="calisma6.html">Çalışma6</a><br>
-    <h2 title="Çalışılmaya başlandı">Bugün Çarşamba</h2>
-    <p title="Bişeyler Öğreniliyor">
-        Zaman geçtikçe daha da geliştirilir.
+    <div class="menu">
+        <a href="index.html">Ana sayfa</a>
+        <a href="calisma.html">Çalışma1</a>
+        <a href="calisma2.html">Çalışma2</a>
+        <a href="calisma3.html">Çalışma3</a>
+        <a href="calisma4.html">Çalışma4</a>
+        <a href="calisma5.html">Çalışma5</a>
+        <a href="calisma6.html">Çalışma6</a>
+    </div>
+
+    <h1 style="text-align:center;"> Yüzüncü Yıl Üniversitesi </h1>
+    <img style="display: block;margin-left: auto;margin-right: auto;width: 330px;" src="img/yyu-logo.png">
+
+    <h2> What is Lorem Ipsum?</h2>
+    <p>
+        Lorem Ipsum is <span style="color:red">yyü</span> dummy text of the printing and typesetting industry. Lorem
+        Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+        of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+        leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+        release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
+        like Aldus PageMaker including versions of Lorem Ipsum
     </p>
+
+
 </body>
 
 </html>
