düzenlemeler yapıldı ve klü çalışması olarak değiştirildi.

--- a/calisma.html
+++ b/calisma.html
@@ -12,7 +12,7 @@
 
         }
 
-        
+
 
 
 
@@ -73,19 +73,20 @@
             font-size: 15px;
 
         }
+
         .footer {
             background-color: burlywood;
             height: 50px;
         }
     </style>
 </head>
-
+</html>
 <body style="background-color:gainsboro">
     <div class="anablok">
         <div class="menu">
             <a href="index.html">Ana sayfa</a>
             <a class="active" href="calisma.html">YYÜ ÇALIŞMA</a>
-            <a href="calisma2.html">Çalışma2</a>
+            <a href="calisma2.html">KLÜ ÇALIŞMA</a>
             <a href="calisma3.html">Çalışma3</a>
             <a href="calisma4.html">Çalışma4</a>
             <a href="calisma5.html">Çalışma5</a>
@@ -125,12 +126,12 @@
 
         </div>
 
-        <div class="footer" >
+        <div class="footer">
 
             <div style="display:block;margin-left:auto;margin-right:auto;width:20%;">
-            <a style="color: blue" href="https://www.yyu.edu.tr/">Yyü Sayfası</a>
-            <a style="color:blue" href="https://www.yyu.edu.tr/Iletisim.php">Yyü İletişim</a>
-        </div>
+                <a style="color: blue" href="https://www.yyu.edu.tr/">Yyü Sayfası</a>
+                <a style="color:blue" href="https://www.yyu.edu.tr/Iletisim.php">Yyü İletişim</a>
+            </div>
 
 
         </div>
