--- a/index.html
+++ b/index.html
@@ -15,18 +15,131 @@
             font-size: 25px;
             padding: 10px;
         }
+        .anablok {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
+
+        }
+
+
+
+
+
+        .menu {
+            background-color: #4285f4;
+        }
     </style>
 </head>
 
 <body style="background-color:pink;">
-    <a href="index.html">Ana sayfa</a>
-    <a href="calisma.html">Çalışma1</a>
-    <a href="calisma2.html">Çalışma2</a>
-    <a href="calisma3.html">Çalışma3</a>
-    <a href="calisma4.html">Çalışma4</a>
-    <a href="calisma5.html">Çalışma5</a>
-    <a href="calisma6.html">Çalışma6</a><br>
-    <h1 style="color:black;"><i>Burası ana sayfadır.</i></h1>
+
+    <!-- body: belgenin gövdesini tanımlar.-->
+    <p align="center"> html satranç sayfası</p>
+    <table align="center" border='1' width='500'>
+        <!-- table:tablo tanımlar.-->
+        <!-- widht:genişlik.-->
+        <tbody>
+            <!-- tbody:gövde içeriğini gruplandırmak için kullanılır.-->
+            <tr height='40'>
+                <!-- height:yükseklik-->
+                <!-- tr:satırı tanımlar.-->
+                <td bgcolor='blue'></td>
+                <!-- td:tablo hücresini tanımlar.-->
+                <!-- bgcolor:belgenin arka plan rengini tanımlar.-->
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+            </tr>
+            <tr height='40'>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+            </tr>
+            <tr height='40'>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+            </tr>
+            <tr height='40'>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+            </tr>
+            <tr height='40'>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+            </tr>
+            <tr height='40'>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+            </tr>
+            <tr height='40'>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+            </tr>
+            <tr height='40'>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+                <td bgcolor='red'></td>
+                <td bgcolor='blue'></td>
+            </tr>
+        </tbody>
+    </table><br>
+    <div class="anablok">
+        <div class="menu">
+            <a href="index.html">Ana Sayfa</a>
+            <a href="calisma.html">YYÜ ÇALIŞMA</a>
+            <a href="calisma2.html">KLÜ ÇALIŞMA</a>
+            <a href="calisma3.html">Çalışma3</a>
+            <a href="calisma4.html">Çalışma4</a>
+            <a href="calisma5.html">Çalışma5</a>
+            <a href="calisma6.html">Çalışma6</a><br>
+            <h2 style="color:black;">Burası ana sayfadır.</h2>
+        </div>
+
     <!--kötü iframe örneği.-->
     <!-- <iframe src="calisma.html"></iframe><br>
         <iframe src="calisma2.html"></iframe><br>
