index.html sayfası düzenlendi.

--- a/calisma2.html
+++ b/calisma2.html
@@ -87,7 +87,7 @@
     <div class="anablok">
         <div class="menu">
             <a href="index.html">Ana sayfa</a>
-            <a href="calisma.hmtl">YYÜ ÇALIŞMA</a>
+            <a href="calisma.html">YYÜ ÇALIŞMA</a>
             <a class="active" href="calisma2.html">KLÜ ÇALIŞMA</a>
             <a href="calisma3.html">Çalışma3</a>
             <a href="calisma4.html">Çalışma4</a>
