--- a/index.html
+++ b/index.html
@@ -3,18 +3,6 @@
 
 <head>
     <style>
-        a {
-
-            font-weight: rgb(206, 112, 112);
-            color: rgb(54, 50, 50);
-            font-style: oblique;
-            font-family: arial;
-            text-decoration: none;
-            vertical-align: baseline;
-            display: inline-block;
-            font-size: 25px;
-            padding: 10px;
-        }
         .anablok {
             display: block;
             margin-left: auto;
@@ -30,13 +18,41 @@
         .menu {
             background-color: #4285f4;
         }
+
+        .menu a {
+            text-align: center;
+            font-weight: 800;
+            color: white;
+            font-style: oblique;
+            font-family: arial;
+            text-decoration: none;
+            vertical-align: baseline;
+            display: inline-block;
+            font-size: 25px;
+            padding: 10px;
+            width: 12%;
+        }
+        .menu {
+            background-color: #4285f4;
+        }
     </style>
 </head>
 
 <body style="background-color:pink;">
+    <div class="anablok">
+        <div class="menu">
+            <a href="index.html">Ana Sayfa</a>
+            <a href="calisma.html">YYÜ ÇALIŞMA</a>
+            <a href="calisma2.html">KLÜ ÇALIŞMA</a>
+            <a href="calisma3.html">Çalışma3</a>
+            <a href="calisma4.html">Çalışma4</a>
+            <a href="calisma5.html">Çalışma5</a>
+            <a href="calisma6.html">Çalışma6</a><br>
+        </div>
+        <h2 style="color:black;">Burası ana sayfadır.</h2>
 
     <!-- body: belgenin gövdesini tanımlar.-->
-    <p align="center"> html satranç sayfası</p>
+    <p align="center"> html Satranç Sayfası</p>
     <table align="center" border='1' width='500'>
         <!-- table:tablo tanımlar.-->
         <!-- widht:genişlik.-->
@@ -128,17 +144,7 @@
             </tr>
         </tbody>
     </table><br>
-    <div class="anablok">
-        <div class="menu">
-            <a href="index.html">Ana Sayfa</a>
-            <a href="calisma.html">YYÜ ÇALIŞMA</a>
-            <a href="calisma2.html">KLÜ ÇALIŞMA</a>
-            <a href="calisma3.html">Çalışma3</a>
-            <a href="calisma4.html">Çalışma4</a>
-            <a href="calisma5.html">Çalışma5</a>
-            <a href="calisma6.html">Çalışma6</a><br>
-            <h2 style="color:black;">Burası ana sayfadır.</h2>
-        </div>
+
 
     <!--kötü iframe örneği.-->
     <!-- <iframe src="calisma.html"></iframe><br>
