--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
             background-color: #4285f4;
         }
 
+        .icerik {
+            width: 100%;
+            display: flex;
+            padding-bottom: 15px;
+            background-color: blanchedalmond;
+        }
+
+        .footer {
+            background-color: burlywood;
+            height: 50px;
+        }
+
         .menu a {
             text-align: center;
             font-weight: 800;
@@ -32,127 +44,140 @@
             padding: 10px;
             width: 12%;
         }
+
         .menu {
             background-color: #4285f4;
         }
     </style>
 </head>
 
-<body style="background-color:pink;">
-    <div class="anablok">
-        <div class="menu">
-            <a href="index.html">Ana Sayfa</a>
-            <a href="calisma.html">YYÜ ÇALIŞMA</a>
-            <a href="calisma2.html">KLÜ ÇALIŞMA</a>
-            <a href="calisma3.html">Çalışma3</a>
-            <a href="calisma4.html">Çalışma4</a>
-            <a href="calisma5.html">Çalışma5</a>
-            <a href="calisma6.html">Çalışma6</a><br>
-        </div>
-        <h2 style="color:black;">Burası ana sayfadır.</h2>
+<body style="background-color:gainsboro;">
+    <div class="icerik">
+        <div class="anablok">
+            <div class="menu">
+                <a href="index.html">Ana Sayfa</a>
+                <a href="calisma.html">YYÜ ÇALIŞMA</a>
+                <a href="calisma2.html">KLÜ ÇALIŞMA</a>
+                <a href="calisma3.html">Çalışma3</a>
+                <a href="calisma4.html">Çalışma4</a>
+                <a href="calisma5.html">Çalışma5</a>
+                <a href="calisma6.html">Çalışma6</a><br>
+            </div>
+            <h2 style="color:black;">Burası ana sayfadır.</h2>
 
-    <!-- body: belgenin gövdesini tanımlar.-->
-    <p align="center"> html Satranç Sayfası</p>
-    <table align="center" border='1' width='500'>
-        <!-- table:tablo tanımlar.-->
-        <!-- widht:genişlik.-->
-        <tbody>
-            <!-- tbody:gövde içeriğini gruplandırmak için kullanılır.-->
-            <tr height='40'>
-                <!-- height:yükseklik-->
-                <!-- tr:satırı tanımlar.-->
-                <td bgcolor='blue'></td>
-                <!-- td:tablo hücresini tanımlar.-->
-                <!-- bgcolor:belgenin arka plan rengini tanımlar.-->
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-            </tr>
-            <tr height='40'>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-            </tr>
-            <tr height='40'>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-            </tr>
-            <tr height='40'>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-            </tr>
-            <tr height='40'>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-            </tr>
-            <tr height='40'>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-            </tr>
-            <tr height='40'>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-            </tr>
-            <tr height='40'>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-                <td bgcolor='red'></td>
-                <td bgcolor='blue'></td>
-            </tr>
-        </tbody>
-    </table><br>
+            <!-- body: belgenin gövdesini tanımlar.-->
+            <p align="center"> html Satranç Sayfası</p>
+            <table align="center" border='1' width='500'>
+                <!-- table:tablo tanımlar.-->
+                <!-- widht:genişlik.-->
+                <tbody>
+                    <!-- tbody:gövde içeriğini gruplandırmak için kullanılır.-->
+                    <tr height='40'>
+                        <!-- height:yükseklik-->
+                        <!-- tr:satırı tanımlar.-->
+                        <td bgcolor='blue'></td>
+                        <!-- td:tablo hücresini tanımlar.-->
+                        <!-- bgcolor:belgenin arka plan rengini tanımlar.-->
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                    </tr>
+                    <tr height='40'>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                    </tr>
+                    <tr height='40'>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                    </tr>
+                    <tr height='40'>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                    </tr>
+                    <tr height='40'>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                    </tr>
+                    <tr height='40'>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                    </tr>
+                    <tr height='40'>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                    </tr>
+                    <tr height='40'>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                        <td bgcolor='red'></td>
+                        <td bgcolor='blue'></td>
+                    </tr>
+                </tbody>
+            </table><br>
+            <div class="footer">
+
+                <div style="display:block;margin-left:auto;margin-right:auto;width:20%;">
+                    <a style="color: blue" href="http://www.satranc.net/tarihce/">Satranç Tarihçesi</a><br>
+                    <a style="color:blue" href="http://www.satranc.net/kategori/satranc-hakkinda/ani-goezlem-alintilar/">Satranç Hikayeleri</a>
+                </div>
 
 
-    <!--kötü iframe örneği.-->
-    <!-- <iframe src="calisma.html"></iframe><br>
+            </div>
+
+
+
+            <!--kötü iframe örneği.-->
+            <!-- <iframe src="calisma.html"></iframe><br>
         <iframe src="calisma2.html"></iframe><br>
         <iframe src="calisma3.html" width="250"></iframe><br>
         <iframe src="calisma4.html"></iframe><br>
         <iframe src="calisma5.html"></iframe><br>
         <iframe src="calisma6.html" width="250"></iframe> -->
+        </div>
 </body>
 
 </html>
