sayfanın boşluğu düzeltildi ve içerik ortalandı.

--- a/index.html
+++ b/index.html
@@ -52,18 +52,21 @@
 </head>
 
 <body style="background-color:gainsboro;">
-    <div class="icerik">
-        <div class="anablok">
+    <div class="anablok">
             <div class="menu">
-                <a href="index.html">Ana Sayfa</a>
-                <a href="calisma.html">YYÜ ÇALIŞMA</a>
-                <a href="calisma2.html">KLÜ ÇALIŞMA</a>
-                <a href="calisma3.html">Çalışma3</a>
-                <a href="calisma4.html">Çalışma4</a>
-                <a href="calisma5.html">Çalışma5</a>
-                <a href="calisma6.html">Çalışma6</a><br>
-            </div>
-            <h2 style="color:black;">Burası ana sayfadır.</h2>
+                    <a href="index.html">Ana Sayfa</a>
+                    <a href="calisma.html">YYÜ ÇALIŞMA</a>
+                    <a href="calisma2.html">KLÜ ÇALIŞMA</a>
+                    <a href="calisma3.html">Çalışma3</a>
+                    <a href="calisma4.html">Çalışma4</a>
+                    <a href="calisma5.html">Çalışma5</a>
+                    <a href="calisma6.html">Çalışma6</a><br>
+                </div>
+        <div class="icerik">
+            <div style="margin-left:auto; margin-right:auto; display:block;">
+
+
+            <h2 style="color:black; text-align: center;">Burası ana sayfadır.</h2>
 
             <!-- body: belgenin gövdesini tanımlar.-->
             <p align="center"> html Satranç Sayfası</p>
@@ -157,12 +160,15 @@
                         <td bgcolor='blue'></td>
                     </tr>
                 </tbody>
-            </table><br>
+            </table><br></div>
+        </div>
             <div class="footer">
 
                 <div style="display:block;margin-left:auto;margin-right:auto;width:20%;">
                     <a style="color: blue" href="http://www.satranc.net/tarihce/">Satranç Tarihçesi</a><br>
-                    <a style="color:blue" href="http://www.satranc.net/kategori/satranc-hakkinda/ani-goezlem-alintilar/">Satranç Hikayeleri</a>
+                    <a style="color:blue"
+                        href="http://www.satranc.net/kategori/satranc-hakkinda/ani-goezlem-alintilar/">Satranç
+                        Hikayeleri</a>
                 </div>
 
 
@@ -170,14 +176,9 @@
 
 
 
-            <!--kötü iframe örneği.-->
-            <!-- <iframe src="calisma.html"></iframe><br>
-        <iframe src="calisma2.html"></iframe><br>
-        <iframe src="calisma3.html" width="250"></iframe><br>
-        <iframe src="calisma4.html"></iframe><br>
-        <iframe src="calisma5.html"></iframe><br>
-        <iframe src="calisma6.html" width="250"></iframe> -->
+
         </div>
+    </div>
 </body>
 
 </html>
