--- a/calisma5.html
+++ b/calisma5.html
@@ -89,11 +89,11 @@
     <div class="anablok">
         <div class="menu">
             <a href="index.html">Ana sayfa</a>
-            <a class="active" href="calisma.html">YYÜ ÇALIŞMA</a>
+            <a href="calisma.html">YYÜ ÇALIŞMA</a>
             <a href="calisma2.html">KLÜ ÇALIŞMA</a>
             <a href="calisma3.html">Çalışma3</a>
             <a href="calisma4.html">Çalışma4</a>
-            <a href="calisma5.html">Çalışma5</a>
+            <a class="active" href="calisma5.html">Çalışma5</a>
             <a href="calisma6.html">Çalışma6</a>
         </div>
         <div class="icerik">
