--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body style="background-color:gainsboro;">
     <div class="anablok">
             <div class="menu">
-                    <a href="index.html">Ana Sayfa</a>
+                    <a class="active" href="index.html">Ana Sayfa</a>
                     <a href="calisma.html">YYÜ ÇALIŞMA</a>
                     <a href="calisma2.html">KLÜ ÇALIŞMA</a>
                     <a href="calisma3.html">Çalışma3</a>
